--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@improbable-eng/grpc-web": "^0.15.0",
+    "@improbable-eng/grpc-web-node-http-transport": "^0.15.0",
     "axios": "^1.3.4",
     "fs-extra": "^11.1.0",
+    "google-protobuf": "^3.21.2",
+    "grpc": "^1.24.11",
     "openai": "^3.2.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
-    "yarg": "^1.0.8"
+    "yargs": "^17.7.1"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.1",
